@@ -332,6 +332,15 @@ INCLUDE 'ui-header.html'
              value = 'IC_cogs'} ?>
    </div>
    <div class="inputgroup">
+      <?lsmb IF form.IC_expense;IC_expense= 'CHECKED'; END;
+         INCLUDE input element_data={
+              name = 'IC_returns',
+              type = 'checkbox',
+             label = text('Returns'),
+           checked = IC_returns,
+             value = ' IC_returns'} ?>
+   </div>
+   <div class="inputgroup">
       <?lsmb IF form.IC_taxpart; IC_taxpart= 'CHECKED'; END;
          INCLUDE input element_data={
               name = 'IC_taxpart',
@@ -360,15 +369,6 @@ INCLUDE 'ui-header.html'
              label = text('Expense'),
            checked = IC_expense,
              value = 'IC_expense'} ?>
-   </div>
-   <div class="inputgroup">
-      <?lsmb IF form.IC_expense;IC_expense= 'CHECKED'; END;
-         INCLUDE input element_data={
-              name = 'IC_returns',
-              type = 'checkbox',
-             label = text('Returns'),
-           checked = IC_returns,
-             value = ' IC_returns'} ?>
    </div>
    <div class="inputgroup">
       <?lsmb IF form.IC_taxservice; IC_taxservice= 'CHECKED'; END;
